--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,6 +22,12 @@ body {
     padding-bottom: 1em;
 }
 
+.nav-item > a {
+    color: rgba(0,0,0,.5);
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
 
 @media (min-width: 768px) { /*-md*/
     .container {
