--- a/static/css/main.css
+++ b/static/css/main.css
@@ -28,6 +28,10 @@ body {
     padding-right: 1rem;
 }
 
+.showcase-logo {
+    width: 100%;
+    height: auto;
+}
 
 @media (min-width: 768px) { /*-md*/
     .container {
